# IPCamera-CPython-Interface

./: .directory  .gitignore  README.md
(Deprecated)Interface_v3/CWrapper/: CHKCamera.h
(Deprecated)Interface_v3/Demo_HK_CPlus/: CHKCamera.h
(Deprecated)Interface_v3/Demo_HK_PY/: hk_demo_v2.py  py_disk_interface.py
(Deprecated)Interface_v3/PyCExt/: CMakeLists.txt  PyIPCamera.cpp  README.md  pywrapper.cpp
Demo_HK_CPlus/: CMakeLists.txt  camera_test.cpp
Demo_HK_PY/: README.md  demo_v1.py  ffmpeg_pipe_v4.py  memory_v3.py
Interface_v3/CWrapper/: CHKCamera.cpp  CMakeLists.txt  README.MD
Interface_v3/Demo_HK_CPlus/: README.md
Interface_v3/Demo_HK_PY/: HCNetSDK.h  ffmpeg_pipe_v4.py
Interface_v3/hk_interface/CWrapper/: CHKCamera.cpp  CMakeLists.txt  README.MD
Interface_v3/hk_interface/Demo_HK_CPlus/: README.md
Interface_v3/hk_interface/Demo_HK_PY/: README.md  memory_v3.py
Interface_v3/hk_interface/PyCExt/: CMakeLists.txt  PyIPCamera.cpp
Interface_v3/hk_interface/sdk/: README.md
Interface_v3/hk_interface/sdk/include/: PlayM4.h
Interface_v3/sdk/incCn/: LinuxPlayM4.h
Interface_v3/sdk/lib/: test
Interface_v3/xm_interface/: README.md
Interface_v3/xm_interface/CWrapper/: CXMCamera.cpp
Interface_v3/xm_interface/PyCExt/: PyXMCamera.cpp  README.md  pywrapper.cpp
Interface_v3/xm_interface/demo_c_cpp/: CMakeLists.txt
Interface_v3/xm_interface/demo_python/: frame.py  memory_v3.py
Interface_v3/xm_interface/sdk/: README.md
Interface_v4/xm_interface_v4/: README.md
Interface_v4/xm_interface_v4/CWrapper/: CXMCamera.cpp
Interface_v4/xm_interface_v4/demo_c_cpp/: CMakeLists.txt  xm.cpp
Interface_v4/xm_interface_v4/sdk/: README.md
Interface_v4/xm_interface_v4/sdk/include/: CXMCamera.h
PyCExt/: CMakeLists.txt  PyIPCamera.cpp  README.md
deb_packager/: Readme.md
hk_interface_v3/Demo_HK_CPlus/: CMakeLists.txt  camera_test.cpp
hk_interface_v3/Demo_HK_PY/: memory_v2.py
hk_interface_v3/PyCExt/: README.md
hk_interface_v3/sdk/: README.md
hk_interface_v3/sdk/include/: CHKCamera.h
hk_interface_v4/CWrapper/: CHKCamera.cpp  CMakeLists.txt  README.MD
hk_interface_v4/demo/: CMakeLists.txt  README.md  camera_test.cpp  interface.py  memory.py
hk_interface_v4/sdk/: README.md
hk_interface_v4/sdk/include/: CHKCamera.h
hk_interface_v4/sdk/lib/: memory.py
introduction/: 数据驱动层IPC取帧接口说明.pptx
py_packager/: Readme.md  install_interface.sh  setup.py  test.py
py_packager/IPCamera/: interface.py
release/: IPCInterface-0.1-py3-none-any.whl  Readme.md  cuda_note.txt  ffmpeg_install.sh  libipc_1.0.0_amd64.deb  nginx_install.sh  opencv.pc  opencv_install.sh  python_requirements.sh  vscode_install.sh  yarn_install.sh
release/nginx_setup/: ajax.googleapis.com.conf  init_ssh.sh  nginx.conf
sdk/: README.md
xm_interface_v3/CWrapper/: CMakeLists.txt  README.MD
xm_interface_v3/PyCExt/: CMakeLists.txt
xm_interface_v3/demo_c_cpp/: README.MD  xm.cpp
xm_interface_v3/demo_python/: detection.py
xm_interface_v3/sdk/include/: CXMCamera.h  netsdk.h
xm_interface_v4/CWrapper/: CMakeLists.txt  CXMCamera.cpp  README.MD
xm_interface_v4/PyWrapper/: CXMCamera.cpp  MANIFEST  setup.py
xm_interface_v4/PyWrapper/dep/: decode_video.c  setup.py  xm_module.cpp
xm_interface_v4/demo/: CMakeLists.txt  README.md  memory.py  xm.cpp
xm_interface_v4/demo_c_cpp/: xm.cpp
xm_interface_v4/demo_python/: memory_v3.py
xm_interface_v4/sdk/: README.md
xm_interface_v4/sdk/include/: CXMCamera.h  netsdk.h
